// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`arbitrary values > bg-[#bada55] text-[22px] before:content-['Festivus'] 1`] = `
"<div class="bg-_b_hbada55_B text-_b22px_B before_ccontent-_b_aFestivus_a_B">
      <!-- ... -->
    </div>"
`;

exports[`arbitrary values > top-[117px] 1`] = `
"<div class="top-_b117px_B">
    <!-- ... -->
  </div>"
`;

exports[`arbitrary values > top-[117px] lg:top-[344px] 1`] = `
"<div class="top-_b117px_B lg_ctop-_b344px_B">
      <!-- ... -->
    </div>"
`;
